--- a/distro/ubuntu/build
+++ b/distro/ubuntu/build
@@ -2,7 +2,7 @@
 
 # fill it
 pkgname=mate-backgrounds
-pkgver=2011.10.29
+pkgver=2011.12.01
 pkgrel=1
 pkgdesc="Background images and data for MATE"
 
@@ -14,7 +14,10 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var || return 1
+	./configure \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--localstatedir=/var || return 1
 
 	make || return 1
 
