add GreenTraditional background for MATE, move Stripes wallpaper to desktop folder

--- a/abstract/Makefile.am
+++ b/abstract/Makefile.am
@@ -6,8 +6,7 @@ background_DATA = \
 	Gulp.png \
 	Silk.png \
 	Spring.png \
-	Waves.png \
-	stripes.jpg
+	Waves.png
 
 
 metadata_in_files = mate-abstract.xml.in
