--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 AC_INIT([mate-backgrounds],
-	[1.2.0],
+	[1.2.1],
 	[http://www.mate-desktop.org])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AM_INIT_AUTOMAKE
@@ -19,6 +19,7 @@ AM_MAINTAINER_MODE
 AC_OUTPUT([
 Makefile
 abstract/Makefile
+desktop/Makefile
 nature/Makefile
 po/Makefile.in
 ])
