--- a/desktop/mate-desktop.xml.in.in
+++ b/desktop/mate-desktop.xml.in.in
@@ -8,7 +8,7 @@
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Stripes</_name>
-		<filename>@datadir@/pixmaps/backgrounds/mate/desktop/Stripes.jpg</filename>
+		<filename>@datadir@/pixmaps/backgrounds/mate/desktop/Stripes.png</filename>
 		<options>zoom</options>
 	</wallpaper>
 </wallpapers>
