--- a/desktop/mate-desktop.xml.in.in
+++ b/desktop/mate-desktop.xml.in.in
@@ -11,15 +11,18 @@
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Green Traditional</_name>
-		<filename>@datadir@/pixmaps/backgrounds/mate/desktop/GreenTraditional.jpg</filename>
+		<filename>@datadir@/pixmaps/backgrounds/mate/desktop/GreenTraditional.png</filename>
 		<options>zoom</options>
+		<shade_type>horizontal-gradient</shade_type>
+		<pcolor>#27587E</pcolor>
+		<scolor>#627F5A</scolor>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Stripes</_name>
 		<filename>@datadir@/pixmaps/backgrounds/mate/desktop/Stripes.png</filename>
 		<options>zoom</options>
-		<shade_type>vertical-gradient</shade_type>
-		<pcolor>#5891BC</pcolor>
-		<scolor>#44A52A</scolor>
+		<shade_type>horizontal-gradient</shade_type>
+		<pcolor>#27587E</pcolor>
+		<scolor>#627F5A</scolor>
 	</wallpaper>
 </wallpapers>
