--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,7 @@ AC_INIT([mate-backgrounds],
 	[1.6.0],
 	[http://www.mate-desktop.org])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
-AM_INIT_AUTOMAKE
-AM_INIT_AUTOMAKE([1.9])
+AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-xz tar-ustar])
 
 # Internationalization:
 GETTEXT_PACKAGE=mate-backgrounds
