--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,9 @@ dist-hook:
 		echo A git clone is required to generate a ChangeLog >&2; \
 	fi
 
+EXTRA_DIST = \
+	autogen.sh
+
 DISTCLEANFILES = \
 	intltool-extract \
 	intltool-merge \
