Add new "Float into MATE" wallpaper by Rowen Stipe

--- a/desktop/Makefile.am
+++ b/desktop/Makefile.am
@@ -1,6 +1,7 @@
 backgrounddir = $(datadir)/backgrounds/mate/desktop
 
-background_DATA =\
+background_DATA = \
+	Float-into-MATE.png \
 	GreenTraditional.jpg \
 	Stripes.png
 
