--- a/nature/mate-nature.xml.in.in
+++ b/nature/mate-nature.xml.in.in
@@ -7,6 +7,7 @@
 		<_name>Fresh Flower</_name>
 		<filename>@datadir@/backgrounds/mate/nature/FreshFlower.jpg</filename>
 		<options>zoom</options>
+		<artist>Jens Ansorg</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<!-- Translators: This is the name of a desktop background image that shows a green meadow.
@@ -14,55 +15,66 @@
 		<_name>Green Meadow</_name>
 		<filename>@datadir@/backgrounds/mate/nature/GreenMeadow.jpg</filename>
 		<options>zoom</options>
+		<artist>Timothy Schellhase, Lapo Calamandrei</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Aqua</_name>
 		<filename>@datadir@/backgrounds/mate/nature/Aqua.jpg</filename>
 		<options>zoom</options>
+		<artist>Charles Barbin</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Dune</_name>
 		<filename>@datadir@/backgrounds/mate/nature/Dune.jpg</filename>
 		<options>zoom</options>
+		<artist>Marco Cogoni, Hylke Bons</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Storm</_name>
 		<filename>@datadir@/backgrounds/mate/nature/Storm.jpg</filename>
 		<options>zoom</options>
+		<artist>Sergey Nazarov</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Two Wings</_name>
 		<filename>@datadir@/backgrounds/mate/nature/TwoWings.jpg</filename>
 		<options>zoom</options>
+		<artist>Charles Barbin, Hylke Bons</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Lady Bird</_name>
 		<filename>@datadir@/backgrounds/mate/nature/LadyBird.jpg</filename>
 		<options>zoom</options>
+		<artist>Charles Barbin</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Blinds</_name>
 		<filename>@datadir@/backgrounds/mate/nature/Blinds.jpg</filename>
 		<options>zoom</options>
+		<artist>Lennart Poettering, Andrea Cimitan</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Rain Drops</_name>
 		<filename>@datadir@/backgrounds/mate/nature/RainDrops.jpg</filename>
 		<options>zoom</options>
+		<artist>blackcombwhistler07</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Yellow Flower</_name>
 		<filename>@datadir@/backgrounds/mate/nature/YellowFlower.jpg</filename>
 		<options>zoom</options>
+		<artist>Charles Barbin</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Garden</_name>
 		<filename>@datadir@/backgrounds/mate/nature/Garden.jpg</filename>
 		<options>zoom</options>
+		<artist>Charles Barbin</artist>
 	</wallpaper>
 	<wallpaper deleted="false">
 		<_name>Wood</_name>
 		<filename>@datadir@/backgrounds/mate/nature/Wood.jpg</filename>
 		<options>zoom</options>
+		<artist>Jean-François Fortin Tam</artist>
 	</wallpaper>
 </wallpapers>
