Add MATE-Stripes Wallpapers
- Add desktop/MATE-Stripes-Dark.png semi-transparent PNG wallpaper
- Add desktop/MATE-Stripes-Light.png semi-transparent PNG wallpaper
- Add both files to desktop/Makefile.am
- Add wallpaper metadata for MATE-Stripes Wallpapers

--- a/desktop/Makefile.am
+++ b/desktop/Makefile.am
@@ -3,7 +3,9 @@ backgrounddir = $(datadir)/backgrounds/mate/desktop
 background_DATA = \
 	Float-into-MATE.png \
 	GreenTraditional.jpg \
-	Stripes.png
+	Stripes.png \
+	MATE-Stripes-Dark.png \
+	MATE-Stripes-Light.png
 
 metadata_in_files = mate-desktop.xml.in
 metadatadir = $(datadir)/mate-background-properties
