--- a/Makefile.am
+++ b/Makefile.am
@@ -37,5 +37,14 @@ MAINTAINERCLEANFILES = \
 	missing \
 	mkinstalldirs
 
+# Build ChangeLog from GIT  history
+ChangeLog:
+	$(AM_V_GEN) if test -d $(top_srcdir)/.git; then \
+		GIT_DIR="$(top_srcdir)/.git" git log --stat > $@; \
+	fi
+
+dist: ChangeLog
+
+.PHONY: ChangeLog
 
 -include $(top_srcdir)/git.mk
