--- a/configure.ac
+++ b/configure.ac
@@ -10,8 +10,8 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],
 	["$GETTEXT_PACKAGE"], [The domain name to use with gettext.])
 
-AM_GLIB_GNU_GETTEXT()
-IT_PROG_INTLTOOL([0.35.0])
+AM_GNU_GETTEXT_VERSION([0.19.8])
+AM_GNU_GETTEXT([external])
 
 AM_MAINTAINER_MODE
 
