--- a/desktop/Makefile.am
+++ b/desktop/Makefile.am
@@ -14,7 +14,9 @@ background_DATA = \
 metadata_in_files = mate-desktop.xml.in
 metadatadir = $(datadir)/mate-background-properties
 metadata_DATA = $(metadata_in_files:.xml.in=.xml)
-@INTLTOOL_XML_RULE@
+
+$(metadata_DATA): $(metadata_in_files)
+	$(AM_V_GEN) GETTEXTDATADIR=$(top_srcdir) $(MSGFMT) --xml --template $< -d $(top_srcdir)/po -o $@
 
 noinst_DATA = mate-desktop.xml.in
 CLEANFILES = mate-desktop.xml mate-desktop.xml.in
