--- a/nature/Makefile.am
+++ b/nature/Makefile.am
@@ -17,7 +17,9 @@ background_DATA =\
 metadata_in_files = mate-nature.xml.in
 metadatadir = $(datadir)/mate-background-properties
 metadata_DATA = $(metadata_in_files:.xml.in=.xml)
-@INTLTOOL_XML_RULE@
+
+$(metadata_DATA): $(metadata_in_files)
+	$(AM_V_GEN) GETTEXTDATADIR=$(top_srcdir) $(MSGFMT) --xml --template $< -d $(top_srcdir)/po -o $@
 
 noinst_DATA = mate-nature.xml.in
 CLEANFILES = mate-nature.xml mate-nature.xml.in
