--- a/.tx/config
+++ b/.tx/config
@@ -3,7 +3,7 @@ host = https://www.transifex.com
  
 [MATE.1-24--mate-backgrounds]
 file_filter = po/<lang>.po
-source_file = po/mate-backgrounds.pot
+source_file = mate-backgrounds.pot
 source_lang = en
 type = PO
 minimum_perc = 2
