build: add meson config files to EXTRA_DIST
fixes https://github.com/mate-desktop/mate-backgrounds/issues/30

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,7 +20,9 @@ dist-hook:
 
 EXTRA_DIST = \
 	its \
-	autogen.sh
+	autogen.sh \
+	meson.build \
+	po/meson.build
 
 MAINTAINERCLEANFILES = \
 	Makefile.in \
