--- a/nature/Makefile.am
+++ b/nature/Makefile.am
@@ -24,7 +24,10 @@ $(metadata_DATA): $(metadata_in_files)
 noinst_DATA = mate-nature.xml.in
 CLEANFILES = mate-nature.xml mate-nature.xml.in
 
-EXTRA_DIST = $(background_DATA) mate-nature.xml.in.in
+EXTRA_DIST = \
+	$(background_DATA) \
+	mate-nature.xml.in.in \
+	meson.build
 
 mate-nature.xml.in: mate-nature.xml.in.in Makefile
 	$(AM_V_GEN)sed -e 's^\@datadir\@^$(datadir)^g' < $(srcdir)/mate-nature.xml.in.in > mate-nature.xml.in.tmp \
