--- a/abstract/mate-abstract.xml.in.in
+++ b/abstract/mate-abstract.xml.in.in
@@ -57,4 +57,13 @@
 		<options>zoom</options>
 		<artist>Patryk Zawadzki</artist>
 	</wallpaper>
+		<wallpaper deleted="false">
+		<name>Waves</name>
+		<filename>@datadir@/backgrounds/mate/abstract/Beach.png</filename>
+		<shade_type>horizontal-gradient</shade_type>
+		<pcolor>#27587E</pcolor>
+		<scolor>#627F5A</scolor>
+		<options>zoom</options>
+		<artist>Condratiy Lenovin</artist>
+	</wallpaper>
 </wallpapers>
