--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
 
 notifications:
   irc:
-    if: branch = master AND
+    if: (tag OR branch = master) AND
         repo = "mate-desktop/mate-backgrounds"
     channels:
       - "irc.freenode.org#mate-dev"
