--- a/abstract/mate-abstract.xml.in.in
+++ b/abstract/mate-abstract.xml.in.in
@@ -57,4 +57,13 @@
 		<options>zoom</options>
 		<artist>Patryk Zawadzki</artist>
 	</wallpaper>
+	<wallpaper deleted="false">
+		<name>Something slowly gets clear</name>
+		<filename>@datadir@/backgrounds/mate/abstract/Elephants.jpg</filename>
+		<shade_type>vertical-gradient</shade_type>
+		<pcolor>#729FCF</pcolor>
+		<scolor>#000000</scolor>
+		<options>zoom</options>
+		<artist>Wyng Stancikaite</artist>
+	</wallpaper>
 </wallpapers>
