--- a/abstract/mate-abstract.xml.in.in
+++ b/abstract/mate-abstract.xml.in.in
@@ -66,4 +66,23 @@
 		<options>zoom</options>
 		<artist>Wyng Stancikaite</artist>
 	</wallpaper>
+	<wallpaper deleted="false">
+		<name>Something slowly gets clear (3840x2160)</name>
+		<filename>@datadir@/backgrounds/mate/abstract/Elephants_3840x2160.jpg</filename>
+		<shade_type>vertical-gradient</shade_type>
+		<pcolor>#729FCF</pcolor>
+		<scolor>#000000</scolor>
+		<options>span</options>
+		<artist>Wyng Stancikaite</artist>
+	</wallpaper>
+	<wallpaper deleted="false">
+		<name>Something slowly gets clear (5640x3172)</name>
+		<filename>@datadir@/backgrounds/mate/abstract/Elephants_5640x3172.jpg</filename>
+		<shade_type>vertical-gradient</shade_type>
+		<pcolor>#729FCF</pcolor>
+		<scolor>#000000</scolor>
+		<options>span</options>
+		<artist>Wyng Stancikaite</artist>
+	</wallpaper>
+
 </wallpapers>
