--- a/.tx/config
+++ b/.tx/config
@@ -1,9 +1,10 @@
 [main]
 host = https://www.transifex.com
- 
-[MATE.master--mate-backgrounds]
-file_filter = po/<lang>.po
-source_file = po/mate-backgrounds.pot
-source_lang = en
-type = PO
+
+[o:mate:p:MATE:r:master--mate-backgrounds]
+file_filter  = po/<lang>.po
+source_file  = po/mate-backgrounds.pot
+source_lang  = en
+type         = PO
 minimum_perc = 2
+
