travis-CI: mark rootdir as save
fixes this error:
```
make[3]: Entering directory '/rootdir'

Creating ChangeLog

fatal: unsafe repository ('/rootdir' is owned by someone else)

To add an exception for this directory, call:

	git config --global --add safe.directory /rootdir

Failed to generate ChangeLog
```
A change was introduced in git 2.35.2 (and newer) to prevent a user from executing git commands in a repository owned by a different user.
See https://confluence.atlassian.com/bbkb/git-command-returns-fatal-error-about-the-repository-being-owned-by-someone-else-1167744132.html

--- a/.build.yml
+++ b/.build.yml
@@ -47,6 +47,7 @@ build_scripts:
   - make
 
 after_scripts:
+  - git config --global --add safe.directory /rootdir
   - if [ ${BUILD_TYPE} == "scripts" ];then
   -     make distcheck
   - fi
